@@ -1,3 +1,8 @@
+2007-04-20  Bernd Schmidt  <bernd.schmidt@analog.com>
+
+	* reload.c (combine_reloads): When trying to use a dying register,
+	check whether it's uninitialized and don't use if so.
+
 2007-04-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.c (bdesc_2arg): Use ORDERED rather than UNORDERED
